# autoresearch-trading-india

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  PRODUCTION_STRATEGY.md  README.md  STRATEGY_DEVELOPMENT_PLAN.md  journal.md  journal_pre-2026-05-16_archive.md  learnings.md  prepare.py  program.md  pyproject.toml  strategy.py
backtest/: anti_overfit.py  costs.py  engine.py  metrics.py  risk.py  sealed_budget.py
brokers/: dhan.py  dhan_mock.py  dhan_token.py
data/: bse.py  corporate_actions.py  fundamentals_xbrl.py  ingest_corporate_actions.py  ingest_earnings.py  ingest_fii_dii_history.py  ingest_fundamentals.py  ingest_gdelt.py  ingest_macro.py  ingest_news.py  ingest_news_historical.py  ingest_prices.py  live_health.py  news_filter.py  nse_calendar.py  pead.py  quality_screen.py  realworld_review_validator.py  safety_state.py  sectors.py  universe.py
docs/: handoff-india-pivot.md  learnings-from-us-build.md
experiments/: core_satellite.py  defmom_engine.py  diag_gross.py  gate_blend.py  gate_lowvol.py  lowvol_engine.py  make_recovery_variants.py  prod_returns.py  qualmom_engine.py  reingest_be.py  returns_compare.py  run_extended.py  run_gates.py  sealed_clean.py  test_defmom.py  test_qualmom.py  test_top500.py  value_spike.py  variant_lowvolfilter.py
iterations/: log.csv
llm/: cache.py  classify.py  features.py  prompts.py  provider.py
scripts/: _dashboard.py  backfill_5y.py  backfill_universe.py  baseline_ablation.py  bootstrap_ingest.py  cash_floor.py  daily_report.py  daily_update.py  dashboard.py  dhan_smoke.py  dhan_token_refresh.py  halt.py  (+26 more)
(+119 files in other folders)
