[project]
name = "autoresearch-trading-india"
version = "0.1.0"
description = "LLM-driven autoresearch swing trading on Indian equities (Nifty 500 liquid slice via Dhan HQ)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backtrader>=1.9.78.123",
    "duckdb>=1.1.0",
    "requests>=2.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.13.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "claude-agent-sdk>=0.1.0",
    "yfinance>=0.2.40",
    "beautifulsoup4>=4.12.3",
    "feedparser>=6.0.11",
    "lxml>=5.2.0",
    "tenacity>=9.0.0",
    "matplotlib>=3.9.0",
    "jinja2>=3.1.4",
    "tabulate>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "network: marks tests that hit the network (deselect by default)",
    "integration: end-to-end integration tests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501"]  # line length handled by formatter

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
